One more try to fix tests.