@@ -333,7 +333,7 @@
                     </executions>
                     <configuration>
                         <forkCount>${failsafe.forkCount}</forkCount>
-                        <argLine>-Xmx1024m</argLine>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                         <reuseForks>true</reuseForks>
                         <trimStackTrace>false</trimStackTrace>
                         <systemPropertyVariables>
